--- a/Login_MAUI/Pages/FetchData.razor
+++ b/Login_MAUI/Pages/FetchData.razor
@@ -1,57 +1,54 @@
 ﻿@*page "/fetchdata"*@
 @page "/fetchdata/{JWT}"
 
-@layout MainLayout
-
 @using Login_MAUI.Data
+@using Login_MAUI.Models
+@using Syncfusion.Blazor.Grids
+@using System
+
 @inject WeatherForecastService ForecastService
+@layout MainLayout
 
 <h1>Weather forecast</h1>
 
 <p>This component demonstrates fetching data from a service.</p>
 
-@if (forecasts == null)
+@if (GridData == null)
 {
-	<p><em>Loading...</em></p>
+	<p><em>Loading... @JWT</em></p>
 }
 else
 {
-	<table class="table">
-		<thead>
-			<tr>
-				<th>Date</th>
-				<th>Temp. (C)</th>
-				<th>Temp. (F)</th>
-				<th>Summary</th>
-			</tr>
-		</thead>
-		<tbody>
-			@foreach (var forecast in forecasts)
-			{
-				<tr>
-					<td>@forecast.Date.ToShortDateString()</td>
-					<td>@forecast.TemperatureC</td>
-					<td>@forecast.TemperatureF</td>
-					<td>@forecast.Summary</td>
-				</tr>
-			}
-		</tbody>
-	</table>
+	<div class="col-lg-12 control-section">
+    <div class="content-wrapper">
+        <div class="row">
+             <div id="container">
+                <SfGrid DataSource="@GridData" AllowPaging="true">
+                    <GridPageSettings PageCount="10"></GridPageSettings>
+                    <GridColumns>
+                        <GridColumn Field=@nameof(Weather.date) HeaderText="Fecha"  Format="d" Type="ColumnType.Date"  Width="150"></GridColumn>
+                        <GridColumn Field=@nameof(Weather.temperatureC) HeaderText="Temp. (C)" Width="150"></GridColumn>
+                        <GridColumn Field=@nameof(Weather.temperatureF) HeaderText="Temp (F)"  Width="150"></GridColumn>
+                        <GridColumn Field=@nameof(Weather.summary) HeaderText="Tipo Clima" Width="150"></GridColumn>
+                    </GridColumns>
+                </SfGrid>
+            </div>
+        </div>
+        </div>
+	</div>
 }
 
 @code {
 	[Parameter]
 	public string JWT { get; set; }
 
-	private WeatherForecast[] forecasts;
+	Services.WeatherService service;
+
+	public List<Weather>  GridData  { get; set; }
 
 	protected override async Task OnInitializedAsync()
 	{
-		forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
-	}
-
-	private async void ShowList()
-	{
-		forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+		service = new Services.WeatherService();
+		GridData  = await service.GetWeathers(JWT);
 	}
 }
